# Mycel

./: .gitignore  CLA.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
docs/: STATUS.md
docs/specs/: kb-directory.md
scripts/: generate-app-icon.mjs
src/: App.css  App.tsx  index.css
src-tauri/: CONTRIBUTING.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: attachments.rs  crypto.rs  database.rs  garden.rs  graph.rs  kb.rs  mod.rs  notes.rs  search.rs  sync.rs  vault.rs
src-tauri/src/commands/ai/: edges.rs  index.rs  insights.rs  mod.rs  related.rs  search.rs  settings.rs
src-tauri/src/core/: crypto.rs  garden.rs  mod.rs  parser.rs  sync.rs  sync_keyring.rs  vault.rs  watcher.rs
src-tauri/src/core/ai/: budget.rs  chunker.rs  config.rs  edges.rs  embedder.rs  indexer.rs  keyring.rs  mod.rs  openrouter.rs  related.rs  search.rs  store.rs
src-tauri/src/core/ai/insights/: README.md  detector.rs  mock_detector.rs  mod.rs  models.rs  scheduler.rs  settings.rs  store.rs
src-tauri/src/core/ai/insights/detectors/: mod.rs  similar_notes.rs
src/components/brand/: Logo.tsx  Spore.tsx  SporeField.tsx
src/components/crypto/: EncryptedNoteBanner.tsx  LockBadge.tsx
src/components/database/: AddColumnModal.tsx  AddColumnPopover.tsx  DatabaseCell.tsx  DatabaseColumnMenu.tsx  DatabaseFilterPanel.tsx  DatabasePicker.tsx  DatabaseTable.tsx  DatabaseToolbar.tsx  DatabaseView.tsx  Select.tsx  floating.ts
src/components/database/cells/: CheckboxCell.tsx  DateCell.tsx  MultiSelectCell.tsx  NumberCell.tsx  PageLinkCell.tsx  RichTextCell.tsx  SelectCell.tsx  TagColorSwatches.tsx  TextCell.tsx  tagColor.ts
src/components/editor/: EditorTabs.tsx  EmptyEditor.tsx  ExternalLinkNavigation.ts  ImageViewer.tsx  MarkdownDecorations.ts  MarkdownEditor.tsx  SlashCompletion.ts  WikilinkCompletion.ts  WikilinkNavigation.ts
src/components/editor/decorations/: ImageDecoration.ts  MathDecoration.ts
src/components/editor/math/: katex-render.ts
src/components/garden/: GardenHelp.tsx  GardenSidebar.tsx  GardenView.tsx  QuickCapture.tsx
src/components/garden/actions/: ActionsView.tsx
src/components/garden/inbox/: InboxView.tsx  ProcessDropdown.tsx
src/components/garden/projects/: ProjectsView.tsx
src/components/garden/review/: WeeklyReview.tsx
src/components/garden/shared/: badges.tsx
src/components/garden/someday/: SomedayView.tsx
src/components/garden/waiting/: WaitingView.tsx
src/components/graph/: GraphView.tsx
src/components/insights/: InsightCard.tsx  InsightsPanel.tsx  InsightsSidebar.tsx  InsightsView.tsx  ResolveDuplicateDialog.tsx
src/components/kb/: KbContextMenu.tsx  KbDeleteConfirm.tsx
src/components/markdown/: InlineMarkdown.tsx
src/components/onboarding/: VaultPicker.tsx
src/components/search/: QuickSwitcher.tsx  TagSearch.tsx
src/components/settings/: AISettings.tsx  AcceptanceReport.tsx  InsightsSettings.tsx
src/components/sidebar/: FileTree.tsx  Sidebar.tsx
src/components/sync/: CloneVaultDialog.tsx  ConflictDialog.tsx  SyncPanel.tsx  SyncStatusBadge.tsx
src/components/table/: EditableTable.tsx
src/components/ui/: PalettePicker.tsx  RightPanel.tsx  Select.tsx  SettingsDialog.tsx  button.tsx
src/hooks/: useAutoLock.ts  useDailyNote.ts  useQuickNote.ts  useTheme.ts
src/lib/: attachments.ts  editor-registry.ts  garden-tab.ts  insights-tab.ts  markdown-parse.ts  math.ts  note-name.ts  rrf.ts
src/lib/codemirror/: database-slash.ts  database-widget.ts  editable-table-widget.ts  markdown-table-widget.ts  search-panel.ts  table-slash.ts
src/lib/database/: api.ts  filtering.ts  insert.ts  resolve.ts
src/lib/table/: insert.ts  serialize.ts
src/stores/: ai.ts  crypto.ts  customOrder.ts  garden.ts  insights.ts  recentVaults.ts  sync.ts  ui.ts  vault.ts
src/types/: database.ts  garden.ts  index.ts
