[package]
name = "mycel"
version = "0.1.0"
description = "Local-first knowledge base with semantic search"
authors = ["Mycel Contributors"]
edition = "2021"

[lib]
name = "mycel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
notify = { version = "6", features = [] }
pulldown-cmark = "0.11"
gray_matter = "0.2"
regex = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
indexmap = { version = "2", features = ["serde"] }
