[package]
name = "mycel"
version = "0.1.0"
description = "Local-first knowledge base with semantic search"
authors = ["Mycel Contributors"]
edition = "2021"

[lib]
name = "mycel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
notify = { version = "6", features = [] }
pulldown-cmark = "0.11"
gray_matter = "0.2"
regex = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
indexmap = { version = "2", features = ["serde"] }
git2 = { version = "0.19", default-features = false, features = ["https", "vendored-openssl", "vendored-libgit2"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
sha2 = "0.10"
# Per-note encryption (.md.age). `armor` keeps ciphertext text-friendly so
# Git / iCloud / Syncthing carry encrypted notes as opaque text blobs.
age = { version = "0.11", default-features = false, features = ["armor"] }
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
# HTTP client for OpenRouter. rustls-tls keeps us off the system OpenSSL while
# git2 stays on its own vendored copy; the two stacks don't share state.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
# Local AI index lives in `.mycel/ai/index.db`. MVP-1 only uses the
# `ai_usage` table; the sqlite-vec virtual table is wired in MVP-2.
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
mockito = "1"
